Merge branch 'master' into rgb-led
Removed the Sequencer, sync and cap-sense, since they conflict on the
protocol.

Conflicts:
	firmware/app_layer_v1/adc.c
	firmware/app_layer_v1/features.c
	firmware/app_layer_v1/nbproject/configurations.xml
	firmware/app_layer_v1/protocol.c
	firmware/app_layer_v1/protocol.h
	firmware/app_layer_v1/protocol_defs.h
	firmware/libconn/bt_connection.c
	software/IOIOLib/src/ioio/lib/api/IOIO.java
	software/IOIOLib/src/ioio/lib/impl/IOIOImpl.java
	software/IOIOLib/src/ioio/lib/impl/IOIOProtocol.java
	software/IOIOLibBT/src/ioio/lib/android/bluetooth/BluetoothIOIOConnection.java
	tools/make-firmware-release