@@ -26,7 +26,6 @@
  * authors and should not be interpreted as representing official policies, either expressed
  * or implied.
  */
-
 package ioio.lib.impl;
 
 import ioio.lib.api.IOIOConnection;
@@ -42,7 +41,7 @@ public class SocketIOIOConnectionBootstrap implements IOIOConnectionBootstrap {
 	@Override
 	public void getFactories(Collection<IOIOConnectionFactory> result) {
 		result.add(new IOIOConnectionFactory() {
-			private Integer port_ = new Integer(IOIO_PORT);
+			private Integer port_ = Integer.valueOf(IOIO_PORT);
 			
 			@Override
 			public String getType() {
